<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpellingApp</string>
    <string name="main_title1">Spelling App</string>
    <string name="main_title2">For Samantha\n developed by Daddy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spelling_bee_btn_prompt">Spelling Bee</string>
    <string name="store_btn_prompt">Store a New Word</string>
    <string name="list_btn_prompt">List of Words</string>
    <string name="PREF_FILE">PREF_FILE</string>
    <string name="WORD_LIST">WORD_LIST</string>
    <string name="WORD_ID">WORD_ID</string>
    <string name="ROW_NUMBER">ROW_NUMBER</string>
    <string name="no_words_prompt">There are no words to display!</string>
    <string name="return_main_button_label">Return to the Main Screen</string>
    <string name="delete_selected_words_button">Delete Checked Words</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="title_activity_display_list">DisplayListActivity</string>
    <string name="title_activity_spelling_bee">SpellingBeeActivity</string>
    <string name="store_title">Store a New Word</string>
    <string name="word_title_lbl">Enter a New Word:</string>
    <string name="image_lbl">Enter a New Image:</string>
    <string name="store_lbl">Store</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Label for the sort preference [CHAR LIMIT=30] -->
    <string name="pref_sort_label">Sort Order</string>

    <!-- Label for alphabetical option in sort preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_alphabetical">Alphabetically: A-Z</string>

    <!-- Label for no sort option in sort preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_no_sort">As stored</string>

    <!-- Label for random option in sort preference [CHAR LIMIT=25] -->
    <string name="pref_sort_label_random">Random order</string>

    <!-- Key name for sort preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_sort_key" translatable="false">sort</string>

    <!-- Key name for sort default in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_sort_default" translatable="false">no sort</string>

    <!-- Value in SharedPreferences for alphabetical sort option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_alphabetical" translatable="false">alphabetical</string>

    <!-- Value in SharedPreferences for no sort option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_no_sort" translatable="false">no sort</string>

    <!-- Value in SharedPreferences for random option [CHAR LIMIT=NONE] -->
    <string name="pref_sort_random" translatable="false">random</string>

</resources>
