<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="@color/ColorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:text="@string/main_title1"
        android:textSize="32sp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/spellingbee"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="32sp"
        android:gravity="center_horizontal"
        android:text="@string/main_title2"
        android:textColor="@android:color/white"
        android:layout_above="@+id/developerName"
        android:layout_below="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/developerName"
        android:layout_above="@+id/spellingBeeButton"
        android:text="PCorletto 2017"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textColor="#ff3130ff"
        android:typeface="serif"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spelling_bee_btn_prompt"
        android:id="@+id/spellingBeeButton"
        android:layout_above="@+id/storeWordButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/ColorAccent"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:paddingBottom="@dimen/small_padding"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_btn_prompt"
        android:id="@+id/storeWordButton"
        android:layout_above="@+id/displayWordListButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/ColorAccent"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:paddingBottom="@dimen/small_padding"
        android:paddingTop="@dimen/small_padding"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_btn_prompt"
        android:id="@+id/displayWordListButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/ColorAccent"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:paddingTop="@dimen/small_padding"/>


</RelativeLayout>
